--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,14 +21,14 @@
 title: Leonardo Setti
 lang: pt-br
 email: leonardo.setti@protonmail.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >- # this means to ignore newlines until "baseurl:""
   
-domain: "leonardosetti.github.io"
+
 baseurl: "" # the subpath of your site, e.g. /blog
+domain: "leonardosetti.github.io"
 url: "https://leonardosetti.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: nameTBD
+# twitter_username: nameTBD
 github_username:  leoanrdosetti
-linkedIn_profile: "https://www.linkedin.com/in/leonardo-setti/"
 
 # Build settings
 # theme: minima
