--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # # Custom configurations
 
 # title: Leonardo Setti
-# email: devnull-vortex@protonmail.com
 # description: >- # this means to ignore newlines until "baseurl:"
 #   Este espaço ainda está em desenvolvimento e testes.
 # baseurl: "" # não fuça aqui, sempre dá problema!
@@ -11,7 +10,6 @@
 
 # # Build settings
 # # theme: minima
-remote_theme: leonardosetti/minimal-mistakes
 # plugins:
 #   - jekyll-feed
 
@@ -50,7 +48,8 @@ remote_theme: leonardosetti/minimal-mistakes
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+remote_theme: leonardosetti/minimal-mistakes
+minimal_mistakes_skin    : "dark" #"default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "pt-BR"
@@ -64,7 +63,7 @@ baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : " " # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -97,11 +96,11 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : # true, false (default)
+search                   : true # true, false (default)
 search_full_content      : # true, false (default)
-search_provider          : # lunr (default), algolia, google
+search_provider          : google  # lunr (default), algolia, google
 lunr:
-  search_within_pages    : # true, false (default)
+  search_within_pages    : true # true, false (default)
 algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
@@ -119,7 +118,7 @@ baidu_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : issaeFera
 facebook:
   username               :
   app_id                 :
@@ -143,8 +142,8 @@ analytics:
 # Site Author
 author:
   name             : "Leonardo Setti"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "QA Analyst: ANdo com muita pressa!."
+  avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "QA Analyst: Ando com muita pressa!."
   location         : "Brazil"
   email            : "devnull-vortex@protonmail.com"
   links:
@@ -153,7 +152,7 @@ author:
       # url: "mailto:your.name@email.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "devnull-vortex@protonmail.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
@@ -162,7 +161,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://github.com/leonardosetti"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -178,7 +177,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: "https://github.com/leonardosetti"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
